--- a/package.json
+++ b/package.json
@@ -73,14 +73,17 @@
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react-swc": "^3.11.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.39.3",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint": "^10.0.1",
+    "eslint-plugin-react-hooks": "^7.1.0-canary-ab18f33d-20260220",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^7.3.1",
+    "typescript-eslint": "^8.56.0",
     "vite": "^7.3.1"
+  },
+  "overrides": {
+    "minimatch": "^10.2.1"
   }
 }
